[package]
name = "tunneled-reverse-proxy"
version = "1.0.1"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]
license = "APGL-3.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.18.2", features = ["full"] }
